# spl

./: README.md
spl3-Boost_Client/: CMakeLists.txt  README.md  makefile
spl3-Boost_Client/include/: ClientMain.h  ServerListener.h  connectionHandler.h
spl3-Boost_Client/src/: BBclient.cpp  ClientMain.cpp  ServerListener.cpp  connectionHandler.cpp
spl3-spl-net/: .gitignore  README.md  pom.xml
spl3-spl-net/Database/: Movies.json  Users.json  example_GenericUsers.json  example_Movies.json  example_Users.json
spl3-spl-net/src/main/resources/: log4j.properties
spl3-spl-net/src/test/java/: TestTpcParserServer.java
spl3-spl-net/src/test/resources/AdvancedServerConnectionsTest/Client_/: Client__testResults
spl3-spl-net/src/test/resources/AdvancedTwo_UTBP_Test/Client_/: Client__testResults
spl3-spl-net/src/test/resources/Advanced_Addmovie_Test/Client_/: Client__testResults
spl3-spl-net/src/test/resources/Advanced_ChangePrice_Test/Client_/: Client__testResults
spl3-spl-net/src/test/resources/Advanced_Remmovie_Test/Client_/: Client__testResults
spl3-spl-net/src/test/resources/Advanced_Rent_Test/Client_/: Client__testResults
spl3-spl-net/src/test/resources/Advanced_Rent_Test/Database/: Movies.json
spl3-spl-net/src/test/resources/Advanced_Rent_Test/Result_Database/: Movies.json
spl_ass1/: CMakeLists.txt  README.md  makefile
spl_ass1/include/: Commands.h  Environment.h  FileSystem.h  Files.h
spl_ass1/src/: Commands.cpp  Environment.cpp  FileSystem.cpp  Files.cpp
spl_ass1/tests/: FileTest2.cpp  filesTests.cpp  logPrint.cpp  logPrint.h  main.cpp
spl_ass2/: .gitignore  README.md  pom.xml  testInput.json
(+115 files in other folders)
